Upload file to S3 and fetch it from there